--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   mockito: ^5.4.2
+  retrofit_generator: ^8.0.4
   build_runner: ^2.4.6
   equatable: ^2.0.5
   dartz: ^0.10.1
